ags (3.14.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wave form editor cursor
	* fixed wave form editor selection

ags (3.14.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented alternative AgsWave insert from clipboard
	* fixed wave form editor cursor position
	* fixed restore AgsAudiorec filename entry from XML
	* fixed ALSA and OSSv4 export thread
	* fixed soundcard export missing start of AgsAudiorec

ags (3.14.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed automation editor to apply lower properly
	* fixed automation editor to respect integer and toggled ports

ags (3.14.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing automation for fx effect processors

ags (3.14.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_dial_get_value() missing return value

ags (3.14.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing format and buffer size property of ags-fx-synth

ags (3.14.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc missing types
	* fixed ags/meson.build missing files

ags (3.14.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsHybridSynth
	* implemented ags-fx-synth
	* TODO:JK: implemented ags-fx-fm-synth
	* implemented ags-fx-chorus
	* added enabled port to ags-fx-low-pass and ags-fx-high-pass
	* fixed AgsSynthUtil sawtooth and triangle

ags (3.13.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved poll timeout of ALSA and OSSv4 devout

ags (3.13.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed OSSv4 list cards functions

ags (3.13.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ALSA and OSSv4 switch buffer flag
	* fixed missing ALSA and OSSv4 soundcard thread sync flags