@@ -1,3 +1,9 @@
+ags (3.14.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed wave form editor paste from clipboard
+	* fixed AgsHybridSynth XML write of sync attack and phase
+
 ags (3.14.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
